derive/test/compile_fail/tuple_incomplete_labels.stderr
error: if any fields have a label then all fields need one
 --> compile_fail/tuple_incomplete_labels.rs:3:10
  |
3 | #[derive(Value)]
  |          ^^^^^
  |
  = note: this error originates in the derive macro `Value` (in Nightly builds, run with -Z macro-backtrace for more info)
